--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -207,9 +207,9 @@
   }
 }
 //header width
-.bgNav {
-  width: 82%;
-}
+// .bgNav {
+//   width: 82%;
+// }
 }
 
 @media screen and (max-width:1330px){
