--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -18,7 +18,8 @@ footer{
   left: 0;
   color: #fff;
   text-align: center;
-  padding: 15px;
+  // padding: 15px;
+  padding: 10px;
   font-family: Neo Sans Pro,Regular;
   font-size:11px;
   p{
