--- a/src/styles/components/_requestform.scss
+++ b/src/styles/components/_requestform.scss
@@ -1,11 +1,10 @@
 .main-requestform{
-  overflow: hidden;
+  overflow-x: hidden;
   height: 100vh;
   // .HomeMain{
   //   margin-bottom: 35em;
   // }
 }
-
 .card{
   background-color: none;
 }
@@ -16,22 +15,38 @@
   background: #5FBAFE;
   color: #fff;
  }
+ .button{
+  height:50px;
+  width: 318px;
+}
+.btn-secondary:focus{
+    outline:none;
+    box-shadow: none;
+}
+
+
+ input .form-control{
+  margin: 0px !important; 
+ }
+
 
 .form-control{
   background-color:#1F3C53 !important;
-  border: 1px solid #1F3C53;
+  border: 1px solid #1F3C53 !important;
   color:#fff;
   height: 51px;
   padding: 15px 10px;
   font-size: 13px;
-  font-family: 'Neo_Sans'
+  font-family: 'Neo_Sans';
+  border-radius:8px;
 }
 .form-control:hover{
   border: 1px solid #1F3C53;
 }
-.form-control:focus{
-  border: 1px solid transparent;
-  transition:none;
+.form-group .form-control:focus{
+  outline:none;
+  box-shadow: none;
+  border-color: none !important;
   color: #fff !important;
 }
 //Error text
@@ -41,10 +56,10 @@
   font-size: 12px;
   font-family:'Open_Sans';
 }
-.input-bgColor:hover{
-  color:#A2B0BA;
-  border: 1px solid #1F3C53;
-}
+// .input-bgColor:hover{
+//   color:#A2B0BA;
+//   border: 1px solid #1F3C53;
+// }
 //Datepicker width
 .react-datepicker-wrapper{
   width:100%;
@@ -52,24 +67,66 @@
 }
 
 //Date in bootstrap
-input[type="date"]{
-  color: #6c757c;
+input[type="date"]::before {
+  content: attr(placeholder) !important;
+  // color: #A2B0BA;
+  color: #a2b0baa8;
 }
-  
+.form-group input[type=date]:focus {
+  color: white !important;
+}
+
+.form-group input[value=""] {
+  // color: #6c757c !important  ;
+  color: #e9ecef00;
+}
+
+input[type="date"]:focus:before,
+input[type="date"]:not([value=""]):before
+{
+  display: none;
+}
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="date"]::-webkit-inner-spin-button{
+    display: none;
+}
+
+#dateInput:not([value])::-webkit-datetime-edit-fields-wrapper,
+#dateInput[value=""]::-webkit-datetime-edit-fields-wrapper { 
+    visibility: hidden;
+}
+
   .Requestbtn{
-    font-family: 'Neo_Sans' ;
+  font-family: 'Neo_Sans' ;
     font-size: 13px;
     font-weight: bold;
     color: #fff;
-    height:52px;
-    background: #5FBAFE linear-gradient(180deg, #5FBAFE, #567CF8) repeat-x;
+    cursor: pointer;
+    height: 50px;
+    width: 100%;
+    border-radius: 8px 8px;
+    transition: .3s;
+    background: #5FBAFE linear-gradient(90deg, #5FBAFE, #567CF8) repeat-x;
+
   }
-  .Requestbtn:hover{
-    background: #5FBAFE;
+
+
+  .btn-secondary:hover{
+    background: #5FBAFE linear-gradient(90deg, #5FBAFE, #567CF8) repeat-x;
+    box-shadow: 0px 4px 4px 0px #5780F880;
+  }
+  
+  .btn-secondary:not(:disabled):not(.disabled):active{
+    background: #5FBAFE linear-gradient(90deg, #5FBAFE, #567CF8) repeat-x;
+    border-color: 1px solid #5FBAFE;
+  }
+  
+  .btn-secondary:not(:disabled):not(.disabled):active:focus{
+    box-shadow: none;
   }
   
 .form-main{
-    padding: 2rem;
+    padding: 32px;
     background: #142A3B;
     // min-height: 40vh;
     a{
@@ -95,36 +152,28 @@ input[type="date"]{
 }
   .cardImg{
     border-radius: 0px;
-    height: 300px;
+    height: 285px;
   }
   .cardImgtext{
-    // margin-top: -50px;
-    // margin-top: 9em;
-    // background: url('/src/components/assets/img/bg/component.png');
-    // padding: 90px 0;
     color: white;
     position: absolute;
-    top: 160px;
+    // top: 168px;
+    top:175px;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 0;
     .para{
-      // top: 200px;
-      // left: 0px;
       text-align: center;
       font-size: 20px;
       font-weight: 600;
       font-family: 'Neo_Sans';
     }
     .subpara{
-      // top: 230px;
-      // left: 40px;
-      // width: 80%;
       text-align: center;
       font-size: 13px;
       font-family: 'Open_Sans';
-      padding: 0px 20px;
+      padding: 0px 30px;
     }
   }
 
@@ -148,8 +197,6 @@ input[type="date"]{
         position: absolute;
       
         .para{
-            // top: 140px;
-            // left: 172px;
             text-align: center;
             font-family: 'Neo_Sans';
             font-size: 20px;
@@ -157,9 +204,6 @@ input[type="date"]{
            
         }
         .subpara{
-            // top: 160px;
-            // left: 40px;
-            // width: 80%;
             text-align: center;
             font-size: 13px;
             font-family: 'Open_Sans';
@@ -179,52 +223,16 @@ input[type="date"]{
         // margin-top: -50px;
         position: absolute;
         color: white;
-    
-       
-        // top: 285px;
-        // left: 138px;
         .para{
-            // top: 400px;
-            // left: 340px;
             text-align: center;
             font-size: 20px;
             font-weight: 600;
             font-family: 'Neo_Sans';
         }
         .subpara{
-            // top: 460px;
-            // left: 170px;
             text-align: center;
             font-size: 13px;
             font-family: 'Open_Sans';
         }
     }
   }
-//   @media screen and (max-width:1281px){
-//     .cardbody-main{
-//       position: relative;
-//     }
-//       .cardImgtext{
-//           margin-top: -50px;
-//           color: white;
-//           font-family: 'Open Sans', sans-serif;
-//           position: absolute;
-//           z-index: 1;
-//           p{
-//             top:126px;
-//             left: 140px;
-//             text-align: center;
-//             font-size: 20px;
-//             font-weight: 600;
-//             font-family: 'NeoSansPro';
-//           }
-//           span{
-//             top: 166px;
-//             left: 22px;
-//             width: 90%;
-//             text-align: center;
-//             font-size: 18px;
-//             font-family: 'Open Sans';
-//       }
-//   }
-// }
