--- a/src/styles/components/_tab.scss
+++ b/src/styles/components/_tab.scss
@@ -29,7 +29,8 @@
         color: #fff;
         text-align: justify;
         font-weight: 100;
-        padding: 15px 0px;
+        // padding: 15px 0px;
+        padding: 0px;
     }
 
 // .button {
