sidebar footer fixed

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -47,10 +47,10 @@
 }
 
 .sidebar-footer{
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   margin: 0 auto;
-  left: 96px;
+  left: 100px;
   font-family: 'Neo_Sans_Pro';
   font-size:11px;
 }
