--- a/src/styles/components/_requestform.scss
+++ b/src/styles/components/_requestform.scss
@@ -65,7 +65,7 @@
 .form-group input[value=""]:before {
   content: attr(placeholder);
   margin-right: 5px;
-  color: #a2b0baa8;
+  color: #A2B0BA;
 }
 
 .form-group input[value=""] {
